test(nio): make F4 execute against real netty, and price F3 as a curve
Three probes, and one of them found a defect that is not ours.

NettySelectedKeysProbe runs netty 4.1.133 NIO event loops and is the first
thing to execute F4 at all: selected-keys fast=1095 generic=0, against fast=0
generic=1151 with the switch off, echo byte-identical to HotSpot on both arms.
It asserts netty's key-set optimisation is actually installed before sending
traffic, because netty's fallback is silent and the run would otherwise be
green while exercising nothing.

The same census settles F2's premise on a real workload rather than by
inference: netty used direct buffers for every transfer and every one was an
arena handle -- direct-raw=0 out of 4296. The zero-copy direct path this work
declined to build is unreachable, now on n=4296 rather than n=1.

SelectorScalingProbe gives F3's mechanism as counters, which are immune to the
host noise that defeated every wall-clock arm: clean=620 dirty=2 mirrored=10
walked=5598 with the cache on, against clean=0 dirty=622 mirrored=5598 off.
560x fewer rows written under the process-global lock.

It also stalls at 256 connections -- in SETUP, between 96 and 128, where
HotSpot handles 2048. Filed as known-issues/netty/blocking-connect-accept-
stalls-near-128-connections-20260905.md. It is NOT this work: with all four
switches off, reverting F1/F3/F4/F5/F6 at runtime, it stalls identically. It
matters because that is the shape an HTTP keep-alive server has, and a server
that cannot pass ~128 connections does not error -- it hangs.

The end-to-end number is still unmeasured. Azure was tried and is saturated
(load 10 -> 29, five ABBA passes with ON and OFF ranges overlapping completely
and one pass physically inverted). The census proves both arms engaged over
732000 transfers, so what failed is the instrument's resolution, not the change.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>